2006-06-07  David Reveman  <davidr@novell.com>

	* plugins/compiz.schemas.in.in:
	* plugins/resize.c:
	* plugins/move.c: Add initiat_keyboard binding which is more
	appropriate for key-binding as it moves the cursor to middle of
	window.

2006-06-06  David Reveman  <davidr@novell.com>

	* plugins/switcher.c: Track thumbnail damage correctly.
	(switchPaintScreen): Only intercept paintScreen when screen is
	grabbed or we're zooming and ss->translate > 0.001.
	(switchPaintScreen): Paint switcher window correctly when we're
	not zooming.
	Add cube as a dependency to make sure background is rendered
	correctly when zooming.
	(bnc #181909)

	* src/window.c (moveResizeWindow, ensureWindowVisibility):
	Don't make sure fullscreen windows are in workarea.
	(fdo #7115) (bnc #181907)

	* src/event.c (handleEvent): Track XA_WM_CLASS property changes.

	* src/window.c:
	* include/compiz.h: remove updateWindowClass and update
	updateWindowClassHints.

2006-06-02  David Reveman  <davidr@novell.com>

	* configure.ac: Bump version to 0.0.12.

	* src/event.c (handleEvent): Fix typo.

	* gnome/window-decorator/gnome-window-decorator.c:
	Hide tooltips on NotifyGrab. (bnc #180692)

2006-06-01  Dan Winship  <danw@novell.com>

	* src/event.c (handleEvent): If we receive a _NET_SHOWING_DESKTOP
	request with no window set, set the flag on all screens. (Fixes
	the KDE "show desktop" applet.) Also, don't allow a client to
	change its _NET_WM_DESKTOP.

	* src/window.c (addWindow): Set _NET_WM_DESKTOP on all windows to
	0; KDE's pager and tasklist require this to be set. (bnc 178320)

2006-06-01  David Reveman  <davidr@novell.com>

	* include/compiz.h:
	* src/window.c: Add updateWindowClass.

2006-05-31  David Reveman  <davidr@novell.com>

	* include/compiz.h:
	* src/screen.c:
	* src/display.c: Add hide_skip_taskbar_windows option. (bnc 180055)

	* include/compiz.h:
	* src/window.c: Add getStartupId.

	* src/screen.c: Save initial viewport when startup notification